--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "main": "src/index.js",
   "dependencies": {
     "antd": "5.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1"
   },
